# AudioConverter

./: CMakeLists.txt  CMakeSettings.json  README.md
cmake/Modules/: Findmp3lame.cmake
include/: threadpool.h  wav_to_mp3.h
src/: threadpool.cpp  wav_to_mp3.cpp
